# video-library

./: .gitignore  meson.build  readme.md
include/: video-decoder.h  video-encoder.h
src/: video-decoder.cpp  video-encoder.cpp
